--- a/css/home.css
+++ b/css/home.css
@@ -2,6 +2,20 @@ body {
   font-family: 'Candal', sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
 @media only screen and (min-width: 390px) {
   .container {
     min-width: 390px;
