fonts-link in font-face

--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,16 @@ ul {
   list-style: none;
 }
 
+/* candal-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Candal';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/candal-v15-latin-regular.woff2') format('woff2');
+  src: url('../fonts/candal-v15-latin-regular.woff') format('woff'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 @media only screen and (min-width: 390px) {
   .container {
     min-width: 390px;
