--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,8 @@ ul {
   list-style: none;
 }
 
+/* Font-face */
+
 /* candal-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -46,7 +48,58 @@ ul {
 
 @media only screen and (min-width: 390px) {
   .container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+
     min-width: 390px;
     outline: 1px solid red;
   }
+}
+
+.container-flex {
+  display: flex;
+  align-items: baseline;
+}
+
+.navigaton {
+  background-color: #16344c;
+}
+
+.navigaton-list {
+  display: flex;
+  gap: 16px;
+  padding-top: 16px;
+  padding-bottom: 29px;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+}
+
+/*SECTION HERO */
+
+.hero {
+  background-image: url('../img/background/bird.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  width: 390px;
+  height: 719px;
+}
+
+.title {
+  font-family: Candal;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 0.77;
+  letter-spacing: 0em;
+  text-align: center;
+
+  color: #fcfcfc;
+}
+
+.footer {
+  background-color: #16344c;
 }
