--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,26 @@ ul {
   list-style: none;
 }
 
+/* Deafut style */
+
+.btn {
+  display: block;
+  margin: 56px auto;
+
+  width: 224px;
+  height: 40px;
+
+  font-family: Liberation Sans;
+  font-size: 16px;
+
+  padding: 8px 68px;
+
+  border: 1px solid #fcfcfc;
+  border-radius: 8px;
+  background: transparent;
+  color: #fcfcfc;
+}
+
 /* Font-face */
 
 /* candal-regular - latin */
@@ -53,7 +73,7 @@ ul {
     padding-left: 16px;
     padding-right: 16px;
 
-    min-width: 390px;
+    min-width: 358px;
     outline: 1px solid red;
   }
 }
@@ -89,15 +109,29 @@ ul {
   height: 719px;
 }
 
-.title {
+.hero-title {
+  width: 358px;
+  height: 60px;
+
   font-family: Candal;
   font-size: 48px;
   font-weight: 400;
   line-height: 0.77;
-  letter-spacing: 0em;
   text-align: center;
 
   color: #fcfcfc;
+
+  padding-top: 112px;
+}
+
+.hero-text {
+  font-family: Liberation Sans;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+  text-align: center;
+
+  padding-top: 16px;
 }
 
 .footer {
