--- a/css/home.css
+++ b/css/home.css
@@ -16,11 +16,15 @@ ul {
   list-style: none;
 }
 
+/* * {
+  outline: 1px solid black;
+} */
+
 /* Deafut style */
 
 .btn {
   display: block;
-  margin: 56px auto;
+  margin: 0 auto;
 
   width: 224px;
   height: 40px;
@@ -85,6 +89,7 @@ ul {
 
 .navigaton {
   background-color: #16344c;
+  width: 390px;
 }
 
 .navigaton-list {
@@ -110,9 +115,6 @@ ul {
 }
 
 .hero-title {
-  width: 358px;
-  height: 60px;
-
   font-family: Candal;
   font-size: 48px;
   font-weight: 400;
@@ -122,6 +124,8 @@ ul {
   color: #fcfcfc;
 
   padding-top: 112px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .hero-text {
@@ -131,7 +135,57 @@ ul {
   line-height: 1.5;
   text-align: center;
 
+  color: #fcfcfc;
+
   padding-top: 16px;
+  padding-right: 14px;
+}
+
+.hero-btn {
+  margin-top: 56px;
+}
+
+/* SECTION COLLECTION */
+.collection {
+  padding-top: 80px;
+}
+
+.collection-title {
+  font-family: Candal;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.6;
+
+  color: #3b619a;
+}
+
+.collection-short {
+  font-family: Liberation Sans;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+
+  margin-top: 8px;
+  text-align: center;
+
+  color: #787695;
+}
+
+.collection-text {
+  font-family: Liberation Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.6;
+
+  margin-top: 32px;
+}
+
+.collection-btn {
+  background: #5e92b6;
+  color: #fcfcfc;
+
+  margin-top: 56px;
+  margin-bottom: 54px;
 }
 
 .footer {
