--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,32 @@ ul {
   list-style: none;
 }
 
+img {
+  width: 100%;
+  display: block;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+html {
+  scroll-behavior: auto;
+}
+
 /* * {
   outline: 1px solid black;
 } */
@@ -186,6 +212,116 @@ ul {
 
   margin-top: 56px;
   margin-bottom: 54px;
+}
+
+/* SECTION EXLUZIVE-DEALS */
+
+.exclusive-deals {
+  margin-top: 80px;
+}
+
+.exclusive-deals-title {
+  font-family: Candal;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.3;
+  text-align: center;
+
+  color: #3b619a;
+}
+
+.exclusive-deals-subtitle {
+  font-family: Liberation Sans;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+
+  margin-top: 8px;
+
+  text-align: center;
+
+  color: #787695;
+}
+
+.card-container {
+  width: 261px;
+  height: 428px;
+
+  margin-top: 56px;
+
+  border-radius: 8px;
+  position: relative;
+
+  box-shadow: 2.7361674308776855px 2.7361674308776855px 4.560279369354248px 0px
+      rgba(125, 129, 137, 0.12),
+    -2.7361674308776855px -2.7361674308776855px 4.560279369354248px 0px
+      rgba(125, 129, 137, 0.12);
+}
+
+.card-sale {
+  display: flex;
+
+  width: 75px;
+  height: 34px;
+
+  border-radius: 5px;
+
+  background: rgba(222, 75, 83, 1);
+
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 30px;
+}
+
+.card-sale-text {
+  font-family: Liberation Sans;
+  font-size: 16px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 1.1;
+  text-transform: uppercase;
+
+  flex-shrink: 0;
+
+  color: rgba(252, 252, 252, 1);
+}
+
+.card-text {
+  margin: 16px auto 0;
+
+  color: #272727;
+  font-family: Liberation Sans;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.15;
+}
+
+.card-price {
+  color: #de4b53;
+  font-family: Liberation Sans;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.15;
+  display: inline-block;
+
+  margin-top: 24px;
+}
+
+.card-price.sale {
+  color: #272727;
+
+  font-size: 12px;
+  font-weight: 400;
+
+  text-decoration-line: line-through;
+}
+
+.heart {
+  stroke: rgba(39, 39, 39, 1);
 }
 
 .footer {
