--- a/css/home.css
+++ b/css/home.css
@@ -115,7 +115,7 @@ html {
 
 .navigaton {
   background-color: #16344c;
-  width: 390px;
+  min-width: 390px;
 }
 
 .navigaton-list {
@@ -136,8 +136,8 @@ html {
   background-position: center;
   background-repeat: no-repeat;
 
-  width: 390px;
-  height: 719px;
+  min-width: 390px;
+  min-height: 719px;
 }
 
 .hero-title {
