--- a/css/home.css
+++ b/css/home.css
@@ -181,6 +181,7 @@ html {
   font-size: 30px;
   font-weight: 400;
   line-height: 1.6;
+  text-align: center;
 
   color: #3b619a;
 }
@@ -263,6 +264,12 @@ html {
       rgba(125, 129, 137, 0.12);
 }
 
+.button-heart,
+.button-solid {
+  border: none;
+  background-color: transparent;
+}
+
 .card-container.active {
   flex-shrink: 0;
 }
@@ -311,6 +318,14 @@ html {
   font-style: normal;
   font-weight: 700;
   line-height: 1.15;
+
+  text-align: center;
+}
+
+.card-price-container {
+  display: flex;
+  padding: 0 24px 0 24px;
+  align-items: baseline;
 }
 
 .card-price {
@@ -336,6 +351,10 @@ html {
 
 .card-img {
   width: auto;
+}
+
+.button-container {
+  margin-left: auto;
 }
 
 .btn-card-add.btn {
