--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,10 @@ img {
   box-sizing: border-box;
 }
 
+.list {
+  padding: 0;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -270,6 +274,10 @@ html {
   background-color: transparent;
 }
 
+.heart {
+  stroke: black;
+}
+
 .card-container.active {
   flex-shrink: 0;
 }
@@ -369,6 +377,19 @@ html {
 
 .btn-hiden {
   display: none;
+}
+
+.list-title {
+  font-family: Candal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.3;
+
+  color: rgba(120, 118, 149, 1);
+
+  text-align: center;
+  margin-top: 56px;
+  margin-bottom: 32px;
 }
 
 .hide .heart {
