--- a/css/home.css
+++ b/css/home.css
@@ -209,6 +209,7 @@ html {
   line-height: 1.6;
 
   margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .collection-btn {
@@ -394,6 +395,52 @@ html {
 
 .hide .heart {
   stroke: rgba(39, 39, 39, 1);
+}
+
+/* Our blog */
+
+.our-blog-title {
+  font-family: Candal;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 1.3;
+
+  color: rgba(59, 97, 154, 1);
+  text-align: center;
+}
+
+.our-blog-subtitle {
+  font-family: Liberation Sans;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+
+  margin-top: 32px;
+
+  color: rgba(59, 97, 154, 1);
+  text-align: left;
+}
+
+.our-blog-text {
+  font-family: Liberation Sans;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.7;
+
+  text-transform: uppercase;
+
+  color: rgba(120, 118, 149, 1);
+}
+
+.our-blog-subtext {
+  font-family: Liberation Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+
+  text-transform: uppercase;
+
+  color: rgba(39, 39, 39, 1);
 }
 
 .footer {
