--- a/css/home.css
+++ b/css/home.css
@@ -27,6 +27,7 @@ img {
 
 .list {
   padding: 0;
+  margin: 0;
 }
 
 .visually-hidden {
@@ -407,6 +408,9 @@ html {
 
   color: rgba(59, 97, 154, 1);
   text-align: center;
+
+  margin-top: 80px;
+  margin-bottom: 32px;
 }
 
 .our-blog-subtitle {
@@ -444,6 +448,43 @@ html {
   color: rgba(39, 39, 39, 1);
 }
 
+/* FOOTER */
+
 .footer {
   background-color: #16344c;
+}
+
+svg.logo {
+  margin-top: 16px;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  margin-top: 32px;
+}
+
+.footer-link {
+  color: rgba(252, 252, 252, 1);
+  text-decoration: none;
+
+  font-family: Liberation Sans;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.social-networks {
+  margin-left: auto;
+}
+
+.footer-list-networks {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-wrapper {
+  display: flex;
 }
