--- a/css/home.css
+++ b/css/home.css
@@ -330,6 +330,7 @@ html {
   line-height: 1.15;
 
   text-align: center;
+  white-space: nowrap;
 }
 
 .card-price-container {
@@ -487,4 +488,13 @@ svg.logo {
 
 .footer-wrapper {
   display: flex;
+}
+
+.footter-text {
+  font-family: Liberation Sans;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.13;
+
+  color: rgba(252, 252, 252, 1);
 }
