--- a/css/home.css
+++ b/css/home.css
@@ -499,3 +499,21 @@ svg.logo {
 
   color: rgba(252, 252, 252, 1);
 }
+
+.list-social::before {
+  content: '';
+
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+}
+
+.list-social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+
+  margin-top: 40px;
+}
