--- a/css/home.css
+++ b/css/home.css
@@ -498,6 +498,10 @@ svg.logo {
   line-height: 1.13;
 
   color: rgba(252, 252, 252, 1);
+
+  text-align: center;
+  margin-top: 40px;
+  padding-bottom: 32px;
 }
 
 .list-social::before {
@@ -506,7 +510,7 @@ svg.logo {
   display: block;
   width: 100%;
   height: 1px;
-  background-color: white;
+  background-color: rgba(252, 252, 252, 1);
 }
 
 .list-social {
