--- a/css/home.css
+++ b/css/home.css
@@ -116,6 +116,7 @@ html {
 .container-flex {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .navigaton {
@@ -124,18 +125,39 @@ html {
 }
 
 .navigation-top__list {
-  display: flex;
+  display: inline-flex;
+  gap: 7.4px;
 }
 
-.navigation-top__list::before {
+.navigation-top__time {
+  display: inline;
+}
+
+.navigation-top__time::after {
   content: '';
+
+  position: absolute;
+  left: 135px;
+  top: 0;
 
   width: 153.43px;
   height: 32px;
   background-color: black;
-  border-radius: 0 0 10px 10px;
+  border-radius: 0 0 20px 20px;
 
   display: inline-block;
+}
+
+.navigation-top__time {
+  /* //styleName: Default/Body/Bold; */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-weight: 600;
+  line-height: 1.3;
+  /* letter-spacing: -0.40799999237060547px; */
+  text-align: center;
+
+  color: rgba(252, 252, 252, 1);
 }
 
 .navigaton-list {
