--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  font-family: 'Candal', sans-serif;
 }
 
 h1,
@@ -62,6 +62,7 @@ html {
 
   font-family: Liberation Sans;
   font-size: 16px;
+  font-weight: 700;
 
   padding: 8px 68px;
 
@@ -143,6 +144,10 @@ html {
   justify-content: space-between;
 }
 
+.container-flex.top {
+  padding: 0 26px;
+}
+
 .navigaton {
   background-color: #16344c;
   min-width: 390px;
@@ -157,7 +162,7 @@ html {
   content: '';
 
   position: absolute;
-  left: 135px;
+  left: 112px;
   top: 0;
 
   width: 153.43px;
@@ -189,6 +194,29 @@ html {
   padding-left: 0;
   padding-right: 0;
   margin-left: auto;
+}
+
+.list-item__link {
+  position: relative;
+}
+
+.list-item__number {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  border-radius: 50px;
+  background: rgba(222, 75, 83, 1);
+  font-size: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  line-height: 100%;
+
+  width: 14px;
+  height: 14px;
+  color: #ffffff;
+  margin: 0 auto;
 }
 
 /*SECTION HERO */
