--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@ img {
 
 * {
   box-sizing: border-box;
-  /* outline: 1px solid lightseagreen; */
+  outline: 1px solid lightseagreen;
 }
 
 .list {
@@ -61,7 +61,7 @@ html {
   font-size: 16px;
   font-weight: 700;
 
-  padding: 8px 68px;
+  padding: 8px 65px;
 
   border: 1px solid #fcfcfc;
   border-radius: 8px;
@@ -175,8 +175,8 @@ html {
   content: '';
 
   position: absolute;
-  left: 112px;
   top: 0;
+  left: 115px;
 
   width: 153.43px;
   height: 32px;
