--- a/css/home.css
+++ b/css/home.css
@@ -2,6 +2,12 @@ body {
   font-family: 'Candal', sans-serif;
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  body {
+    max-width: 1024px;
+  }
+}
+
 h1,
 h2,
 h3,
@@ -23,7 +29,7 @@ img {
 
 * {
   box-sizing: border-box;
-  /* outline: 1px solid lightseagreen; */
+  outline: 1px solid lightseagreen;
 }
 
 .list {
@@ -141,13 +147,13 @@ html {
   padding-left: 16px;
   padding-right: 16px;
 
-  min-width: 390px;
+  min-width: 358px;
   outline: 1px solid red;
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .container {
-    max-width: 1024px;
+    width: 942px;
   }
 }
 
@@ -159,11 +165,42 @@ html {
 
 .container-flex.top {
   padding: 0 26px;
+  position: relative;
 }
 
 .navigation {
   background-color: #16344c;
   min-width: 390px;
+}
+
+.navigation-search {
+  display: none;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .navigation-search {
+    display: block;
+    width: 325px;
+    height: 40px;
+
+    border-radius: 8px;
+    background: rgb(252, 252, 252);
+  }
+  .navigation-search::placeholder {
+    color: #a0a0a0;
+    font-family: Liberation Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.17;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .navigation-top {
+    display: none;
+    overflow: hidden;
+  }
 }
 
 .navigation-top__list {
