--- a/css/home.css
+++ b/css/home.css
@@ -168,6 +168,16 @@ html {
   position: relative;
 }
 
+.navigation-logo {
+  margin-top: 16px;
+}
+
+/* @media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .navigation-logo {
+    margin: 0;
+  }
+} */
+
 .navigation {
   background-color: #16344c;
   min-width: 390px;
@@ -183,16 +193,25 @@ html {
     width: 325px;
     height: 40px;
 
+    color: rgb(160, 160, 160);
+    font-family: Liberation Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.17;
+
     border-radius: 8px;
     background: rgb(252, 252, 252);
   }
+  .navigation-search-link {
+    display: none;
+  }
+
   .navigation-search::placeholder {
     color: #a0a0a0;
     font-family: Liberation Sans;
     font-size: 18px;
     font-weight: 400;
     line-height: 1.17;
-    text-align: left;
   }
 }
 
@@ -282,6 +301,12 @@ html {
 
   min-width: 390px;
   min-height: 719px;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .hero {
+    background-image: url('../img/background/bird-md.jpeg');
+  }
 }
 
 .hero-title {
@@ -593,10 +618,6 @@ html {
 
 .footer {
   background-color: #16344c;
-}
-
-svg.logo {
-  margin-top: 16px;
 }
 
 .footer-list {
