--- a/css/home.css
+++ b/css/home.css
@@ -220,8 +220,13 @@ html {
   }
 }
 
+.search-icon {
+  display: none;
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .search-icon {
+    display: block;
     position: absolute;
     top: 12px;
     left: 20px;
