--- a/css/home.css
+++ b/css/home.css
@@ -187,6 +187,10 @@ html {
   display: none;
 }
 
+.Search {
+  fill: white;
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .navigation-search-container {
     position: relative;
