--- a/css/home.css
+++ b/css/home.css
@@ -154,6 +154,7 @@ html {
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .container {
     width: 942px;
+    margin-left: 0;
   }
 }
 
