--- a/css/home.css
+++ b/css/home.css
@@ -430,6 +430,12 @@ html {
   margin-bottom: 54px;
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .collection-img {
+    width: auto;
+  }
+}
+
 /* SECTION EXLUZIVE-DEALS */
 
 .exclusive-deals {
