--- a/css/home.css
+++ b/css/home.css
@@ -153,7 +153,7 @@ html {
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .container {
-    width: 942px;
+    min-width: 942px;
     margin-left: 0;
   }
 }
@@ -438,8 +438,13 @@ html {
   }
 }
 
+.collection-img {
+  display: none;
+}
+
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .collection-img {
+    display: block;
     width: auto;
     position: absolute;
     top: 0em;
