--- a/css/home.css
+++ b/css/home.css
@@ -289,6 +289,12 @@ html {
   margin-left: auto;
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .list-item.last {
+    margin-right: 128px;
+  }
+}
+
 .list-item__link {
   position: relative;
 }
