--- a/css/home.css
+++ b/css/home.css
@@ -573,6 +573,12 @@ html {
   gap: 30px;
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .card-wrapper {
+    justify-content: center;
+  }
+}
+
 .card-sale {
   display: flex;
 
