update list section cards

--- a/css/home.css
+++ b/css/home.css
@@ -290,6 +290,15 @@ html {
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  li.list-item {
+    margin-top: 66px;
+  }
+  li.list-item:first-child {
+    margin-top: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .list-item.last {
     margin-right: 128px;
   }
