--- a/css/home.css
+++ b/css/home.css
@@ -703,7 +703,7 @@ html {
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .btn-card.hidden {
-    display: block;
+    display: inline-flex;
   }
 }
 
