section our-blog del gap

--- a/css/home.css
+++ b/css/home.css
@@ -775,7 +775,7 @@ html {
   .our-blog-list {
     display: flex;
     padding: 0;
-    gap: 88px;
+    /* gap: 88px; */
   }
   .list-item.hidden {
     display: none;
