flex-direction: row-reverse in to our-blog-list

--- a/css/home.css
+++ b/css/home.css
@@ -775,6 +775,7 @@ html {
   .our-blog-list {
     display: flex;
     padding: 0;
+    flex-direction: row-reverse;
     /* gap: 88px; */
   }
   .list-item.hidden {
