--- a/css/home.css
+++ b/css/home.css
@@ -195,6 +195,8 @@ html {
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .navigation-search-container {
     position: relative;
+    top: -8px;
+    right: -77px;
   }
 
   .navigation-search {
@@ -869,6 +871,7 @@ html {
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
   .social-networks {
     margin-left: 84px;
+    margin-top: 0;
   }
   /* .icon {
     display: inline-block;
@@ -902,6 +905,7 @@ html {
   .footer-wrapper {
     display: inline-flex;
     justify-content: center;
+    margin-left: 124px;
   }
 }
 
@@ -925,6 +929,27 @@ html {
   width: 100%;
   height: 1px;
   background-color: rgba(252, 252, 252, 1);
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .list-social-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+  }
+
+  /* .list-social-wrapper::after {
+    content: '';
+
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(252, 252, 252, 1);
+  } */
+
+  .list-social::before {
+    display: none;
+  }
 }
 
 .list-social {
