--- a/css/home.css
+++ b/css/home.css
@@ -268,6 +268,7 @@ html {
     display: flex;
     margin-right: auto;
     gap: 72px;
+    margin-left: 200px;
   }
   .navigation-main-list__item-link {
     color: rgb(252, 252, 252);
@@ -277,6 +278,10 @@ html {
     line-height: 1.1;
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+  .navigation-main-list__item-link:hover,
+  .navigation-main-list__item-link:focus {
+    color: #b5e5f3;
   }
 }
 
@@ -559,10 +564,26 @@ html {
   }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .collection-img {
+    width: 595px;
+    height: 638px;
+    top: -3em;
+    right: -40em;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1770px) {
   .collection-picture {
     width: 366px;
     height: 236px;
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .collection-picture {
+    width: 717px;
+    height: 477px;
   }
 }
 
@@ -625,6 +646,8 @@ html {
   object-position: 0 0;
   overflow: hidden;
 
+  padding-left: 24px;
+  padding-right: 24px;
   margin-top: 56px;
 
   border-radius: 8px;
@@ -636,9 +659,26 @@ html {
       rgba(125, 129, 137, 0.12);
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+@media only screen and (min-width: 1024px) and (max-width: 1770px) {
   .card-container {
     margin-top: 112px;
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .card-container {
+    width: 418px;
+    height: 687px;
+  }
+}
+
+.card-container.last {
+  display: none;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .card-container.last {
+    display: block;
   }
 }
 
@@ -755,6 +795,13 @@ html {
   white-space: nowrap;
 }
 
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .card-text {
+    font-size: 18px;
+    text-align: left;
+  }
+}
+
 .card-price-container {
   display: flex;
   padding: 0 24px 0 24px;
@@ -785,6 +832,13 @@ html {
 .card-img {
   width: auto;
   margin: 0 auto;
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .card-img {
+    width: 351px;
+    height: 408px;
+  }
 }
 
 .button-container {
