--- a/css/home.css
+++ b/css/home.css
@@ -560,7 +560,8 @@ html {
     width: auto;
     position: absolute;
     top: 5em;
-    right: -24em;
+    right: -18em;
+    overflow: hidden;
   }
 }
 
@@ -745,6 +746,13 @@ html {
   }
 }
 
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .list-card-img {
+    width: 826px;
+    height: 459px;
+  }
+}
+
 .card-sale {
   display: flex;
 
@@ -808,6 +816,12 @@ html {
   align-items: baseline;
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .card-price-container {
+    padding: 0;
+  }
+}
+
 .card-price {
   color: #de4b53;
   font-family: Liberation Sans;
@@ -820,6 +834,12 @@ html {
   margin-top: 24px;
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .card-price {
+    font-size: 24px;
+  }
+}
+
 .card-price.sale {
   color: #272727;
 
@@ -827,6 +847,12 @@ html {
   font-weight: 400;
 
   text-decoration-line: line-through;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1925px) {
+  .card-price.sale {
+    font-size: 18px;
+  }
 }
 
 .card-img {
@@ -849,10 +875,17 @@ html {
   display: block;
   margin: 19px auto 0;
 
-  width: 213px;
+  width: 100%;
   height: 34px;
 
   background: rgba(94, 146, 182, 1);
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1925px) {
+  .btn-card-add.btn {
+    height: 54px;
+    margin: 100px auto 0;
+  }
 }
 
 .btn-card.hidden {
