--- a/css/home.css
+++ b/css/home.css
@@ -94,7 +94,7 @@ html {
 /* inter-regular */
 
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap;
   font-family: Inter;
   font-style: normal;
   font-weight: 400;
@@ -105,54 +105,43 @@ html {
 
 /* candal-regular - latin */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap;
   font-family: Candal;
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/candal-v15-latin-regular.ttf) format('truetype'),
     url(../fonts/candal-v15-latin-regular.woff) format('woff'),
     url(../fonts/candal-v15-latin-regular.woff2) format('woff2');
-  /* src: url('../fonts/candal-v15-latin-regular.woff2') format('woff2');
-  src: url('../fonts/candal-v15-latin-regular.woff') format('woff'); Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap;
   font-family: LiberationSans;
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/LiberationSans-Regular.ttf) format('truetype'),
     url(../fonts/LiberationSans-Regular.woff) format('woff'),
     url(../fonts/LiberationSans-Regular.woff2) format('woff2');
-  /* src: url('../fonts/LiberationSans-Regular.woff2') format('woff2');
-  src: url('../fonts/LiberationSans-Regular.woff') format('woff');  */
-  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap;
   font-family: LiberationSans;
   font-style: normal;
   font-weight: 700;
   src: url(../fonts/LiberationSans-Regular.ttf) format('truetype'),
     url(../fonts/LiberationSans-Regular.woff) format('woff'),
     url(../fonts/LiberationSans-Regular.woff2) format('woff2');
-  /* src: url('../fonts/LiberationSans-Bold.woff2') format('woff2');
-  src: url('../fonts/LiberationSans-Bold.woff') format('woff');  */
-  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap;
   font-family: SF Pro Text;
   font-style: normal;
   font-weight: 600;
   src: url(../fonts/SF-Pro-Text-Bold.ttf) format('truetype'),
     url(../fonts/SF-Pro-Text-Bold.woff) format('woff'),
     url(../fonts/SF-Pro-Text-Bold.woff2) format('woff2');
-  /* src: url('../fonts/SF-Pro-Text-Bold.woff2') format('woff2');
-  src: url('../fonts/SF-Pro-Text-Bold.woff') format('woff');  */
-  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 .container {
@@ -200,12 +189,6 @@ html {
 .navigation-logo {
   padding-top: 16px;
 }
-
-/* @media only screen and (min-width: 1024px) and (max-width: 1925px) {
-  .navigation-logo {
-    margin: 0;
-  }
-} */
 
 .navigation {
   background-color: #16344c;
@@ -330,12 +313,12 @@ html {
 
 .navigation-top__time {
   display: inline;
-  /* //styleName: Default/Body/Bold; */
+
   font-family: SF Pro Text;
   font-size: 17px;
   font-weight: 600;
   line-height: 1.3;
-  /* letter-spacing: -0.40799999237060547px; */
+
   text-align: center;
 
   color: rgba(252, 252, 252, 1);
@@ -356,15 +339,6 @@ html {
     margin-left: 0;
   }
 }
-
-/* @media only screen and (min-width: 1024px) and (max-width: 1925px) {
-  li.list-item {
-    margin-top: 66px;
-  }
-  li.list-item:first-child {
-    margin-top: 0;
-  }
-} */
 
 @media only screen and (min-width: 1024px) and (max-width: 1770px) {
   .list-item.last {
@@ -1082,17 +1056,6 @@ html {
     margin-left: 10em;
     margin-top: 0;
   }
-  /* .icon {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    stroke-width: 0;
-    stroke: currentColor;
-    fill: currentColor;
-  }
-  .icon-footer-logo {
-    width: 1.6337890625em;
-  } */
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1925px) {
@@ -1150,17 +1113,7 @@ html {
   .list-social-wrapper {
     display: flex;
     flex-direction: row-reverse;
-    /* justify-content: center; */
   }
-
-  /* .list-social-wrapper::before {
-    content: '';
-
-    display: inline-block;
-    width: 100%;
-    height: 1px;
-    background-color: rgba(252, 252, 252, 1);
-  } */
 
   .list-social::before {
     display: none;
