--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -417,6 +417,12 @@ html {
 
 input {
   width: 100%;
+  padding: 12px 16px;
+
+  margin-top: 8px;
+  box-sizing: border-box;
+  border: 1px solid rgba(94, 146, 182, 0.55);
+  border-radius: 10px;
 }
 
 input::placeholder {
@@ -424,8 +430,8 @@ input::placeholder {
   font-family: Liberation Sans;
   font-size: 18px;
   font-weight: 400;
-  line-height: 21px;
-  letter-spacing: 0%;
+  line-height: 1.17;
+
   text-align: left;
 }
 
