corected style with sign-in(button and logo footter)

--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -448,6 +448,11 @@ input::placeholder {
   text-decoration: underline;
 }
 
+.sign-in.btn {
+  width: 100%;
+  background: #5e92b6;
+}
+
 /*!======================================================*/
 /* FOOTER */
 
